# text-finder

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
text_finder/: db.py  index.py  init_routers.py  router.py  server.py  text_service.py
