[tool.poetry]
name = "text-finder"
version = "0.1.0"
description = "The app provides the opportunity for searching text in the database"
authors = ["Dddarknight <9801677@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["psycopg2", "elasticsearch"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "Topic :: Text Processing"
]
repository = "https://github.com/Dddarknight/text-finder"
packages = [{include = "text_finder"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
fastapi = "^0.87.0"
pandas = "^1.5.2"
elasticsearch = {extras = ["async"], version = "^8.5.2"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
